[metadata]
name = ons_mkdocs_theme
version = 1.1.4
author = Keilan Evans, ONS
author_email = Keilan.Evans@ons.gov.uk
description = An ONS MkDocs Theme based on Material for MkDocs for creating documentation websites
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ONSdigital/ons_mkdocs_theme
classifiers =
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11, <3.12
install_requires =
    Babel==2.15.0
    certifi==2024.7.4
    charset-normalizer==3.3.2
    click==8.1.7
    colorama==0.4.6
    csscompressor==0.9.5
    ghp-import==2.1.0
    htmlmin2==0.1.13
    idna==3.7
    Jinja2==3.1.4
    jsmin==3.0.1
    Markdown==3.6
    MarkupSafe==2.1.5
    mergedeep==1.3.4
    mkdocs==1.6.0
    mkdocs-get-deps==0.2.0
    mkdocs-material==9.5.30
    mkdocs-material-extensions==1.3.1
    mkdocs-minify-plugin==0.8.0
    packaging==24.1
    paginate==0.5.6
    pathspec==0.12.1
    platformdirs==4.2.2
    Pygments==2.18.0
    pymdown-extensions==10.9
    python-dateutil==2.9.0.post0
    PyYAML==6.0.1
    pyyaml_env_tag==0.1
    regex==2024.7.24
    requests==2.32.4
    six==1.16.0
    urllib3==2.2.2
    watchdog==4.0.1
include_package_data = True

[options.packages.find]
where = .

[options.package_data]
ons_mkdocs_theme = 
    *.html
    *.css
    *.py
    *.js
    *.png
    *.svg
    *.jpg
    *.jpeg
    *.gif
    *.ico
    *.txt
    *.xml
    *.yml
    *.yaml
    *.json
    *.md
    *.rst
    *.toml
    *.ini
    *.conf
    *.ts

[options.entry_points]
mkdocs.themes =
    ons_mkdocs_theme = ons_mkdocs_theme